assets/css/style.css
* {
    margin: 0;
    font-family: Ubuntu, sans-serif;
}

.row {
    display: flex;
    flex-wrap: wrap;
}

.column-half {
    width: 50%;
}

.column-3rd {
    width: 33%;
}

.column-4th {
    width: 25%;
}

.column-10th {
    width: 10%
}

#nhs-logo {
    float: right;
    margin-right: 2%;
    margin-top: 40px;
    width: 8%;
}

#watch-logo {
    margin-left: 2%;
    margin-top: 35px;
    width: 30%;
}
nav {
    background-color: rgb(127, 0, 127);
    margin-top: 20px;
    height: 60px;
}

nav ul {
    height: 60px;
    list-style-type: none;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

nav li {
    font-size: 1.6em
}

nav a {
    color: white;
    text-decoration: none;
    padding: 20px;
}

nav a:hover {
    color: #EBBD17;
}

.active a {
    background-color: #fff;
    color: rgb(127, 0, 127);
}

.active a:hover {
    color: rgb(127, 0, 127)
}

.dropbtn {
    background-color: rgb(127, 0, 127);
    color: white;
    font-size: 1em;
    border: none;
    cursor: pointer;
    padding: 15px;
  }
  
  .dropdown {
    position: relative;
    display: inline-block;
  }
  
  /* Dropdown Content (Hidden by Default) */
  .dropdown-content {
    display: none;
    white-space: nowrap;
    position: absolute;
    background-color: rgba(235, 189, 23, 0.9);
    min-width: fit-content;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  
  /* Links inside the dropdown */
  .dropdown-content a {
    color: rgb(127, 0, 127);
    padding: 12px 16px;
    text-decoration: none;
    display: block;
  }
  
  /* Show the dropdown menu on hover */
  .dropdown:hover .dropdown-content {
    display: block;
  }

.dropbtn:hover {
    color:#EBBD17;
}

.dropdown-content a:hover {
    color: black;
}

#active-btn {
    background-color: #fff;
    color: rgb(127, 0, 127);
}

.dropdown-content .active-a{
    color: #fff;
}

#hero-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;
    margin-top: 5px;
    position: relative;
} 

#cover-text, #cover-text h2{
    color: #fff;


}

#hero-image {
    height: 600px;
    width: 100%;
    background: url(/assets/images/WATCH\ ambulance.jpg) no-repeat 25% 85%;

    animation-name: hero-zoom;
    animation-duration: 10s;
    animation-fill-mode: forwards;
}


@keyframes hero-zoom {
    from {
        transform: scale(1);
    }
    to { transform: scale(1.1);

    }
}

#cover-text {
    font-size: 130%;
    letter-spacing: 4px;

    width: 300px;
    height: 200px;

    padding: 40px 20px 0 20px;
    

    background-color: rgba(127, 0, 127, 0.7);

    bottom: 50px;
    right: 250px;

    position: absolute;


}

#summary{
    margin: 10px 10% 0 10%;
}

#summary p {
    font-size: larger;
}

#buttons {
    display: flex;
    justify-content: space-around;
    padding: 50px;
}

.purple-btn {
    height: 100px;
    width: 100px;
    background-color: rgb(127, 0, 127);
    border-radius: 50%;

}

.in-btn{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100px;
    width: 100px;
}

.in-btn a {
    color: white;
}

.in-btn i {
    font-size: 200%;
}

.out-btn {
    text-align: center;
}

.out-btn h2 {
    display: inline-block;
}

